syntax = "proto3";

package ai.lzy.v1.allocator;

option java_outer_classname = "DiskApi";
option java_package = "ai.lzy.v1";


enum DiskType {
  DISK_TYPE_UNSPECIFIED = 0;
  HDD = 1;
  SSD = 2;
  NR_SSD = 3;
}

message DiskSpec {
  int64 size_gb = 1;
  DiskType type = 2;
  string name = 3;
}

message Disk {
  string disk_id = 1;
  DiskSpec spec = 2;
  string zone_id = 3;
}